Stretch bug fix

--- a/src/Components/PieceDisplayPage/PieceDisplay.scss
+++ b/src/Components/PieceDisplayPage/PieceDisplay.scss
@@ -117,6 +117,7 @@
 
     #piece-image {
         padding: 5px;
+        align-items: flex-start;
     }
 
     .modal #piece-image {
